--- a/app/views/urls/about.html.erb
+++ b/app/views/urls/about.html.erb
@@ -1,5 +1,5 @@
 
-<div class="jumbotron">
+<div class="jumbotron center">
 <%=link_to "home", root_path %>
 <%=link_to "About Us", "#", class: "btn btn-primary" %>
 </div>
